--- a/css/StyleSheet.css
+++ b/css/StyleSheet.css
@@ -1,4 +1,6 @@
-﻿.footerlinks{
+﻿
+
+.footerlinks{
     color : #ffffff;
     text-decoration  : none !important;
 }
@@ -7,10 +9,3 @@
     color : #ffffff;
 }
 
-#footer1 {
-    background: #28b1f7;
-}
-
-#footer2 {
-    background: #fa8303;
-}
