--- a/Home.Master
+++ b/Home.Master
@@ -20,6 +20,10 @@
     <link href="css/StyleSheet.css" rel="stylesheet" />
 
 
+    <%-- boottrap-bundle-js--%>
+    <script src="bootstrap/js/bootstrap.bundle.js"></script>
+    <%--jquer lib--%>
+    <script src="bootstrap/js/jquery.min.js"></script>
     <%--jquery--%>
     <script src="bootstrap/js/jquery-3.6.0.slim.min.js"></script>
     <%--popper js--%>
@@ -56,28 +60,24 @@
                             <a class="nav-link" href="#">About Us</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Facilities</a>
+                            <a class="nav-link" href="our_services.aspx">Facilities</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">FAQs</a>
+                            <a class="nav-link" href="testimonials.aspx">Testimonials</a>
                         </li>
 
                     </ul>
 
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton4" runat="server">View Doctors</asp:LinkButton>
+                            <asp:LinkButton class="nav-link" ID="LinkButton4" runat="server" href="doctors.aspx">View Doctors</asp:LinkButton>
                         </li>
                         
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton1" runat="server">User Login</asp:LinkButton>
+                            <asp:LinkButton class="nav-link" ID="LinkButton1" runat="server" href="userlogin.aspx">User Login</asp:LinkButton>
                         </li>
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton2" runat="server">Sign Up</asp:LinkButton>
-                        </li>
-                        <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server">New User?</asp:LinkButton>
-
+                            <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server" href="registration.aspx">New User?</asp:LinkButton>
                         </li>
                     </ul>
                 </div>
@@ -100,7 +100,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 text-center">
                         <p>
-                            <asp:LinkButton class="footerlinks" ID="LinkButton6" runat="server">Admin Login</asp:LinkButton>
+                            <asp:LinkButton class="footerlinks" ID="LinkButton6" runat="server" href="AdminLogin.aspx">Admin Login</asp:LinkButton>
                             &nbsp;
                             <asp:LinkButton class="footerlinks" ID="LinkButton11" runat="server">Terms of Usage </asp:LinkButton>
                             &nbsp;
